--- a/src/app/components/admin-navbar/admin-navbar.component.html
+++ b/src/app/components/admin-navbar/admin-navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom border-3">
   <div class="container">
-    <a class="navbar-brand" routerLink="/admin/">Admin panel</a>
+    <a class="navbar-brand" routerLink="/admin/">Админка</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -35,7 +35,7 @@
 
       <form class="d-flex" *ngIf="showSearchForm">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-        <button class="btn btn-outline-success disabled" disabled type="submit">Search</button>
+        <button class="btn btn-outline-success disabled" disabled type="submit">Поиск</button>
       </form>
     </div>
   </div>
