--- a/src/app/components/maintenance/maintenance.component.html
+++ b/src/app/components/maintenance/maintenance.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="mt-3 d-flex flex-column">
-    <div class="display-1 fw-bold text-center">Maintenance</div>
+    <div class="display-1 fw-bold text-center">Обновляем сайт</div>
 
     <div class="display-3 text-center mt-3">
-      Don't panic, we do maintenace stuff. Service will be available soon
+      Без паники! Мы добавляем новые фичи и фиксим баги. Скоро вернемся!
     </div>
     <div class="display-2 text-center mt-3">¯\_(ツ)_/¯</div>
   </div>
