--- a/src/app/modules/home/components/privacy-policy-page/privacy-policy-page.component.html
+++ b/src/app/modules/home/components/privacy-policy-page/privacy-policy-page.component.html
@@ -1,4 +1,4 @@
-<app-page-header>Privacy policy</app-page-header>
+<app-page-header>Пользовательское соглашение</app-page-header>
 
 <div class="container mb-5">
   <div class="card">
