--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="col-sm d-flex align-items-end">
       <div class="d-inline-block my-5">
         <div class="display-1">Tech.Interview</div>
-        <div class="lead">Conduct an interview. Make your notes. Create templates.</div>
+        <div class="lead">Зарплаты в IT и заметки к техническим интервью</div>
       </div>
     </div>
     <div class="col-sm">
@@ -13,54 +13,49 @@
 </div>
 
 <div class="mt-5">
-  <div *ngFor="let hint of images" class="feature {{ hint.background }}">
+
+  <div class="feature bg-white">
     <div class="container">
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="feature-title">{{ hint.title }}</div>
-          <div class="mt-3 feature-subtitle">{{ hint.subtitle }}</div>
-        </div>
-        <div class="col-sm-8">
-          <div *ngIf="hint.showPreloader" class="h-100 d-flex justify-content-center align-items-center">
-            <div class="spinner-border" style="width: 3rem; height: 3rem" role="status">
-              <span class="visually-hidden">Loading...</span>
-            </div>
-          </div>
-          <img
-            [hidden]="hint.showPreloader"
-            class="feature-image"
-            src="{{ hint.imageSrc }}"
-            alt="{{ hint.imageAlt }}"
-            (load)="showImage(hint)"
-            (error)="showImage(hint)"
-          />
-        </div>
+      <div class="feature-title">Зарплаты в IT в Казахстане</div>
+      <div class="mt-3 feature-subtitle">
+        Здесь мы собираем и анализируем данные по зарплатам в IT в РК.
+      </div>
+      <div class="mt-1 feature-subtitle">
+        В 2024 году мы решили, что в Казахстане не хватает актуальной и публичной статистики по зарплатам в IT сфере. Мы решили это исправить.
+      </div>
+      <div class="feature-subtitle">
+        Хочешь узнать, сколько попросить в следующий раз на собеседовании - посмотри в собранной статистике.
+      </div>
+      <div class="mt-5">
+        <a routerLink="/salaries" class="btn btn-huge btn-primary">Перейти к зарплатам</a>
       </div>
     </div>
   </div>
-</div>
 
-<div class="feature bg-white">
-  <div class="container">
-    <div class="feature-title">Application is free for everybody and opensource<br />Forever</div>
-    <div class="mt-3 feature-subtitle">
-      We believe that this app should be free for everyone. 
-      We are <a href="https://github.com/orgs/Techinterview-space/repositories" class="text-reset" target="_blank"><i class="bi bi-github"></i> open source</a> and we are looking for contributors.
-    </div>
-    <div class="mt-3 feature-subtitle">
-      If you want to help us, here is our <a href="https://boosty.to/ake111aa" class="text-reset" target="_blank"><i class="bi bi-cash-coin"></i> boosty</a>. Any help is appreciated.
-    </div>
-    <div class="mt-5">
-      <hr class="mx-auto w-50" />
+  <div class="feature">
+    <div class="container">
+      <div class="feature-title">Заметки к техническим интервью</div>
+      <div class="mt-3 feature-subtitle">
+        Если ты проводишь технические собеседования и хочешь создать шаблон и сохранять фидбеки, чтобы потом делиться ими с коллегами - тебе сюда.
+      </div>
+      <div class="mt-5">
+        <a routerLink="/interviews" class="btn btn-huge btn-outline-primary">Перейти к заметкам</a>
+      </div>
     </div>
   </div>
-</div>
 
-<div class="feature bg-white">
-  <div class="container">
-    <div class="feature-title">Ready to start? Just create your first interview or template</div>
-    <div class="mt-5">
-      <button type="button" class="btn btn-huge btn-primary" (click)="getStarted()">{{ getStartedButtonTitle }}</button>
+  <div class="feature bg-white">
+    <div class="container">
+      <div class="feature-title">Наш проект - некоммерческий и в свободном доступе.</div>
+      <div class="mt-1 feature-title">Так будет всегда.</div>
+      <div class="mt-3 feature-subtitle">
+        Мы верим, что этот проект должен быть бесплатным для всех.
+        <br />
+        Мы открыли исходный код на <a href="https://github.com/orgs/Techinterview-space/repositories" class="text-reset" target="_blank"><i class="bi bi-github"></i> GitHub</a> и будем рады новым контрибьютерам.
+      </div>
+      <div class="mt-3 feature-subtitle">
+        Если вы хотите поддержать нас, то тут наш <a href="https://boosty.to/ake111aa" class="text-reset" target="_blank"><i class="bi bi-cash-coin"></i> бусти</a>. Мы благодарны любой помощи.
+      </div>
     </div>
   </div>
 </div>
