--- a/src/app/modules/interviews/components/my-interview-templates/my-interview-templates.component.html
+++ b/src/app/modules/interviews/components/my-interview-templates/my-interview-templates.component.html
@@ -1,4 +1,4 @@
-<app-page-header>My interview templates</app-page-header>
+<app-page-header>Мои шаблоны</app-page-header>
 
 <div class="container my-5" *ngIf="templates; else dataLoading">
   <div class="card">
@@ -7,11 +7,11 @@
         <table class="table table-hover table-sm">
           <thead>
             <th>#</th>
-            <th>Title</th>
-            <th>Subjects</th>
-            <th>Visibility</th>
-            <th>Labels</th>
-            <th>Last update</th>
+            <th>Название</th>
+            <th>Тем</th>
+            <th>Публичный?</th>
+            <th>Теги</th>
+            <th>Обновлено</th>
             <th></th>
           </thead>
           <tbody>
@@ -23,9 +23,9 @@
               <td><app-label *ngFor="let label of item.labels" [label]="label"></app-label></td>
               <td>{{ item.updatedAt | date: 'HH:mm yyyy-MM-dd' }}</td>
               <td>
-                <a routerLink="/interviews/templates/{{ item.id }}" class="btn-link-sm"> Open </a>
+                <a routerLink="/interviews/templates/{{ item.id }}" class="btn-link-sm"> Открыть</a>
                 <button type="button" class="btn-link-sm btn-link-danger ms-1" title="Delete" (click)="delete(item)">
-                  Delete
+                  Удалить
                 </button>
               </td>
             </tr>
@@ -45,11 +45,11 @@
 <ng-template #nothingToShow>
   <div class="card">
     <div class="card-body">
-      <div class="text-center">You haven't created any template.</div>
+      <div class="text-center">Вы не создали еще пока шаблонов.</div>
 
       <div class="text-center mt-3">
         <a routerLink="/interviews/templates/create" class="btn btn-primary">
-          <i class="bi bi-plus-circle"></i> Create template
+          <i class="bi bi-plus-circle"></i> Создать новый
         </a>
       </div>
     </div>
