--- a/src/app/modules/interviews/components/my-interviews/my-interviews.component.html
+++ b/src/app/modules/interviews/components/my-interviews/my-interviews.component.html
@@ -1,4 +1,4 @@
-<app-page-header>My interviews</app-page-header>
+<app-page-header>Мои заметки</app-page-header>
 
 <div class="container my-5" *ngIf="interviews; else dataLoading">
   <div class="card">
@@ -7,11 +7,11 @@
         <table class="table table-hover">
           <thead>
             <th>#</th>
-            <th>Candidate</th>
-            <th>Grade</th>
-            <th>Subjects</th>
-            <th>Labels</th>
-            <th>Last update</th>
+            <th>Кандидат</th>
+            <th>Грейд</th>
+            <th>Темы</th>
+            <th>Лейблы</th>
+            <th>Обновлено</th>
             <th></th>
           </thead>
           <tbody>
@@ -23,7 +23,7 @@
               <td><app-label *ngFor="let label of item.labels" [label]="label"></app-label></td>
               <td>{{ item.updatedAt | date: 'HH:mm yyyy-MM-dd' }}</td>
               <td>
-                <a routerLink="/interviews/{{ item.id }}" class="btn-link-sm"> <i class="fa fa-eye"></i> Open </a>
+                <a routerLink="/interviews/{{ item.id }}" class="btn-link-sm"> <i class="fa fa-eye"></i> Открыть</a>
               </td>
             </tr>
           </tbody>
@@ -42,10 +42,10 @@
 <ng-template #nothingToShow>
   <div class="card">
     <div class="card-body">
-      <div class="text-center">You haven't created any interview.</div>
+      <div class="text-center">Еще нет заметок.</div>
 
       <div class="text-center mt-3">
-        <a routerLink="/interviews/create" class="btn btn-primary"> <i class="bi bi-plus-circle"></i> Create </a>
+        <a routerLink="/interviews/create" class="btn btn-primary"> <i class="bi bi-plus-circle"></i> Начать интервью</a>
       </div>
     </div>
   </div>
