--- a/src/app/shared/components/go-back-button/go-back-button.component.html
+++ b/src/app/shared/components/go-back-button/go-back-button.component.html
@@ -1,1 +1,1 @@
-<a class="btn btn-outline-dark" (click)="goBack()"><i class="bi bi-arrow-left"></i> Back</a>
+<a class="btn btn-outline-dark" (click)="goBack()"><i class="bi bi-arrow-left"></i> Назад</a>
