--- a/src/app/shared/components/loading-spinner/loading-spinner.component.html
+++ b/src/app/shared/components/loading-spinner/loading-spinner.component.html
@@ -1,3 +1,3 @@
 <div class="spinner-border spinner-border-lg" role="status">
-  <span class="visually-hidden">Loading...</span>
+  <span class="visually-hidden">Загрузка...</span>
 </div>
