--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -58,7 +58,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" routerLink="/me">Мой профиль</a></li>
-              <li><a class="dropdown-item" routerLink="users/me/labels">Мои метки</a></li>
+              <li><a class="dropdown-item" routerLink="users/me/labels">Мои теги</a></li>
               <li><hr class="dropdown-divider" /></li>
               <li><a class="dropdown-item" routerLink="/admin" *appHasRole="'admin'">Админка</a></li>
               <li class="cursor-pointer"><a class="dropdown-item" (click)="logout()">Выйти</a></li>
