--- a/src/app/shared/components/dialogs/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/shared/components/dialogs/confirm-dialog/confirm-dialog.component.html
@@ -10,8 +10,8 @@
         <p class="text-center confirm-message">{{ text }}</p>
 
         <div class="p-1 confirm-button d-flex justify-content-between">
-          <button class="btn btn-{{ noButtonCss }}" (click)="close()">Cancel</button>
-          <button class="btn btn-{{ yesButtonCss }}" (click)="confirm()">Yes</button>
+          <button class="btn btn-{{ noButtonCss }}" (click)="close()">Отменить</button>
+          <button class="btn btn-{{ yesButtonCss }}" (click)="confirm()">Да</button>
         </div>
       </div>
     </div>
