--- a/src/app/modules/home/components/about-us/about-us.component.html
+++ b/src/app/modules/home/components/about-us/about-us.component.html
@@ -15,10 +15,13 @@
         <div>
           <ul class="">
             <li>
-              <a class="text-reset" href="https://github.com/indicozy" target="_blank">Berkut Karlibay</a>
+              <a class="text-reset" href="https://github.com/indicozy" target="_blank">@indicozy</a>
             </li>
             <li>
-              <a class="text-reset" href="https://github.com/maximgorbatyuk" target="_blank">Maxim Gorbatyuk</a>
+              <a class="text-reset" href="https://github.com/sanch941" target="_blank">@sanch941</a>
+            </li>
+            <li>
+              <a class="text-reset" href="https://github.com/maximgorbatyuk" target="_blank">@maximgorbatyuk</a>
             </li>
           </ul>
         </div>
