--- a/src/app/modules/home/components/about-us/about-us.component.html
+++ b/src/app/modules/home/components/about-us/about-us.component.html
@@ -15,13 +15,13 @@
         <div>
           <ul class="">
             <li>
-              <a class="text-reset" href="https://github.com/indicozy" target="_blank">@indicozy</a>
+              <a class="text-reset" href="https://github.com/indicozy" target="_blank">&#64;indicozy</a>
             </li>
             <li>
-              <a class="text-reset" href="https://github.com/sanch941" target="_blank">@sanch941</a>
+              <a class="text-reset" href="https://github.com/sanch941" target="_blank">&#64;sanch941</a>
             </li>
             <li>
-              <a class="text-reset" href="https://github.com/maximgorbatyuk" target="_blank">@maximgorbatyuk</a>
+              <a class="text-reset" href="https://github.com/maximgorbatyuk" target="_blank">&#64;maximgorbatyuk</a>
             </li>
           </ul>
         </div>
