--- a/src/app/modules/home/components/about-us/about-us.component.html
+++ b/src/app/modules/home/components/about-us/about-us.component.html
@@ -42,7 +42,7 @@
         <div class="mt-2">
           В 2021-2022 годах я активно проводил собеседования на основной работе, а также был внешним интервьюером в другой компании.
           Минимум раз в неделю общался с кандидатами и по каждому собеседованию нужно было оформлять фидбек по шаблонам и отдавать рекрутеру.
-          Мне ахотелось автоматизировать процесс, и так и родился сервис Tech.Interview. Я разработал его в первую очередь для себя, но в профессиональных чатах поделился ссылкой и предложил использовать всем желающим.
+          Мне захотелось автоматизировать процесс, и так и родился сервис Tech.Interview. Я разработал его в первую очередь для себя, но в профессиональных чатах поделился ссылкой и предложил использовать всем желающим.
           К сожалению, особой популярности у платформы не было. Через какое-то время я и сам перестал активно проводить собеседования, но оставил портал и продолжил платить за домен.
         </div>
         <div class="mt-2">В 2024 году решил создать сервис по сбору статистики по зарплатам, и самым простым решением было разработать его на базе уже существующей платформы.</div>
