--- a/src/app/modules/salaries/components/add-salary/add-salary.component.html
+++ b/src/app/modules/salaries/components/add-salary/add-salary.component.html
@@ -20,7 +20,7 @@
             [formGroup]="addSalaryForm"
             (ngSubmit)="addSalarySubmitAction()">
             <div class="mb-3">
-              <label>Зарплата в тенге <strong>в месяц</strong>. Если вы получаете в иной валюте, переведите в тенге.</label>
+              <label>Зарплата в тенге <strong>в месяц</strong> "на руки". Если вы получаете в иной валюте, переведите в тенге.</label>
               <input formControlName="value" type="text" class="form-control form-control-lg" appOnlyNumber />
               <app-field-error [field]="addSalaryForm.get('value')" [max]="10000000" [min]="75000"></app-field-error>
             </div>
